Improved to include dynamic getinfo route.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
-<script>
-
-</script>
+<script src="{{ url_for('static',filename='scripts/common.js') }}"> </script>
 <html>
     <body>
         <div class="outer_wrapper">
