--- a/templates/show_post.html
+++ b/templates/show_post.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
+<script src="{{ url_for('static',filename='scripts/common.js') }}"> </script>
 <script>
-
+    window.onload = () => {
+        fetch_json("{{ hostname }}/getinfo",{"post_num": {{ post["id"] }} }, "POST").then( res => res.json() ).then( (info) => {
+            console.log(info)
+        })
+    }
 </script>
 <html>
     <body>
